--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     			I never actually think of irritatiog her, i just get little upset when she don't talk to me that's why i act childish which is really annoying for anyone. All i want is talking to her and spending time with her in game, that's my happiness. I only get angry on her when she says that she don't wanna talk to me or i irritate her. I still remember when she said,'I DON'T WANNA TALK TO YOU AND BLOCKING YOU'. This sentence literally made me cry like hell. When i feel like she is not in a good mood i become sad instead of making her laugh. I just don't wanna lose her at any cost because she is the only one who talk to me and understand me. I miss our old days when there was no misunderstandings, just faith. All i want from her is talking, spending time together in game and most importantly i want our friendship forever, i want to talk to her on call or just wanna hear her voice because listening to her voice makes me feel good and i also relax that she is fine.<br>
     			What happened if she don't like me and rejected me but i will be her friend always. You are my doraemon, my cute little angel.<br>
                 I know i am not that much perfect, because i hurted her so much. I don't know for how long our friendship would be, all i know is that i never gonna get a friend like you that's why i don't wanna get away from you. Even the thought of losing you, scares th eliving daylights out of me. You are on my mind every second, i can't stop thinking about you. I wanna talk to you like old days, full of joy and happiness.
-
+</center>
     			<br><br><br>
-    			<marquee><img src="img/v4.jpeg" LOVE YOU MOON</marquee> 		</p></center>
+    			<marquee><img src="img/v4.jpeg"> LOVE YOU MOON</marquee> 		</p>
 
 
 
