--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 I know i am not that much perfect, because i hurted her so much. I don't know for how long our friendship would be, all i know is that i never gonna get a friend like you that's why i don't wanna get away from you. Even the thought of losing you, scares th eliving daylights out of me. You are on my mind every second, i can't stop thinking about you. I wanna talk to you like old days, full of joy and happiness.
 </center>
     			<br><br><br>
-    			<marquee><img src="img/v4.jpeg"> LOVE YOU MOON</marquee> 		</p>
+                <marquee><font size="10"> LOVE YOU MOON</font></marquee> 		</p>
 
 
 
